--- a/packages/garden/garden_irrigation.yaml
+++ b/packages/garden/garden_irrigation.yaml
@@ -455,12 +455,16 @@ script:
         data_template:
           entity_id: timer.cycle{{ cycle }}_zone_duration
           duration: >
-            {% set duration = states('input_number.cycle' + cycle + '_zone' + zone + '_duration')  | int %}
-            {% set adj_duration = states('input_number.adjusted_cycle' + cycle + '_zone' + zone + '_duration')  | int %}
             {% if is_state('input_boolean.cycle' + cycle + '_use_weather_adjustment', 'on') %}
-              00:{{ '%02i' | format(adj_duration) }}:00
+              {% set adj_duration = states('input_number.adjusted_cycle1_zone1_duration') | float %}
+              {% set mins = (adj_duration // 1) | round(0, floor) %}
+              {% set secs = ((adj_duration - mins) * 60) | round %}
+              00:{{ '%02i' | format(mins) }}:{{ '%02i' | format(secs) }}
             {% else %}
-              00:{{ '%02i' | format(duration) }}:00
+              {% set duration = states('input_number.cycle1_zone1_duration') | float %}
+              {% set mins = (duration // 1) | round(0, floor) %}
+              {% set secs = ((duration - mins) * 60) | round %}
+              00:{{ '%02i' | format(mins) }}:{{ '%02i' | format(secs) }}
             {% endif %}
 
       - wait_template: >
